# hmLispTypeSystem

./: .gitignore  README.md  hmLispTypeSystem.cabal  run.sh  stdLib.lisp
app/: Main.hs
src/: App.hs  Lisp.hs  LispParser.hs  Logging.hs  PrimFns.hs  Repl.hs  Resolver.hs  StdLib.hs  TypeChecker.hs
src/Eval/: Eval.hs  Evaluator.hs  Lower.hs
src/Printer/: Colours.hs  Print.hs  PrintError.hs  PrintEval.hs  PrintType.hs  PrintTypedVal.hs
test/: EvalTests.hs  ParserTests.hs  ResolverTests.hs  Tests.hs  TypeCheckerTests.hs
